# Soundspace

./: BUILD.md  codemagic.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  SpatialDspEngine.cpp
android/app/src/main/kotlin/com/example/soundspace/: MainActivity.kt  ShizukuHelper.kt
android/app/src/main/kotlin/com/example/soundspace/service/: AudioCaptureService.kt
android/app/src/main/res/values/: styles.xml
lib/: main.dart
lib/models/: models.dart
lib/providers/: audio_provider.dart
lib/screens/: home.dart  room_tab.dart  settings_tab.dart  setup_wizard.dart
lib/theme/: theme.dart
lib/widgets/: banner.dart  controls.dart  eq.dart  pad.dart  play_btn.dart  sources.dart
